# WordEdFormatting

./: .gitignore  CMakeLists.txt  FTestFile_1.docx  TestFile_1.docx  TestFile_2.docx  TestFile_3.docx  TestFile_4.docx  build.py
src/word_format/: CMakeLists.txt  formatter.cpp  paints_numberer.cpp  pattern_expression_calc.cpp  pattern_title.cpp
src/word_format/include/: constants_elements.hpp  exporter.hpp  formatter.hpp  formatter_impl.hpp  paints_numberer.hpp  pattern_expression_calc.hpp  pattern_title.hpp
src/word_format/test/: DocxFormatterTests.cpp  PaintNumbererTests.cpp
